# Minesweeper

./: Project.cabal  README.md
app/: Constants.hs  Events.hs  Logic.hs  Main.hs  Types.hs
app/Logic/: Board.hs  Cell.hs  Generator.hs  Logic.hs
app/UI/: Cell.hs  Menu.hs  UI.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
