cabal-version:      2.4
name:               Project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             PlutoEx
maintainer:         arlan.kuralbayev2002@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Project
    main-is:          Main.hs
    ghc-options:      -threaded 
    -- Modules included in this executable, other than Main.
    other-modules:    Types, UI.UI, Constants, UI.Cell, Logic

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      codeworld-api >= 0.8.1,
                      text >= 1.2.5,
                      random <= 1.2.1.1
    hs-source-dirs:   app
    default-language: Haskell2010
